# affinidi-messaging

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  dump.rdb  environments.json  rel.sh
affinidi-messaging-didcomm/: CHANGELOG.md  Cargo.toml  README.md
affinidi-messaging-didcomm/benches/: pack_encrypted.rs  pack_signed.rs
affinidi-messaging-didcomm/examples/: advanced_params.rs  attachments.rs  basic.rs  rotate_did.rs  routing.rs
affinidi-messaging-didcomm/src/: document.rs  envelope.rs  error.rs  jwk.rs  lib.rs
affinidi-messaging-didcomm/src/jwe/: decrypt.rs  encrypt.rs  envelope.rs  mod.rs  parse.rs
affinidi-messaging-didcomm/src/jws/: envelope.rs  mod.rs  parse.rs  sign.rs  verify.rs
affinidi-messaging-didcomm/src/message/: message.rs  pack_plaintext.rs  pack_signed.rs
affinidi-messaging-didcomm/src/test_vectors/: common.rs  encrypted.rs  from_prior.rs  from_prior_jwt.rs  message.rs  mod.rs  plaintext.rs  signed.rs
affinidi-messaging-didcomm/src/utils/: crypto.rs
affinidi-messaging-didcomm/wasm/tests-js/: package-lock.json  package.json
affinidi-messaging-helpers/: Cargo.toml  README.md
affinidi-messaging-helpers/examples/: adam.rs  alice_bob.rs  delete_test.rs  mediator_ping.rs  multi_device.rs  multi_profile.rs  oob_invite.rs  read_raw_didcomm.rs  test_duplicate_ws.rs
affinidi-messaging-helpers/src/common/: affinidi_logo.rs  did.rs  friends.rs  mod.rs  profiles.rs
affinidi-messaging-helpers/src/mediator_administration/: global_acls.rs  main.rs  ui.rs
affinidi-messaging-helpers/src/setup_environment/: main.rs  mediator.rs  network.rs  ssl_certs.rs  ui.rs
affinidi-messaging-mediator/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  out
affinidi-messaging-mediator/.cargo/: config.toml
affinidi-messaging-mediator/affinidi-messaging-mediator-common/: Cargo.toml
affinidi-messaging-mediator/affinidi-messaging-mediator-common/src/: errors.rs
affinidi-messaging-mediator/affinidi-messaging-mediator-processors/: Cargo.toml  README.md
affinidi-messaging-mediator/affinidi-messaging-mediator-processors/conf/: message_expiry_cleanup.toml
affinidi-messaging-mediator/conf/: atm-functions.lua  mediator.toml  mediator_did.json
affinidi-messaging-mediator/examples/: generate_secrets.rs  send_message.rs
affinidi-messaging-mediator/examples/mediator_administration/: global_acls.rs  main.rs  ui.rs
affinidi-messaging-mediator/src/: lib.rs  main.rs  server.rs
affinidi-messaging-mediator/src/common/: acl_checks.rs  config.rs  errors.rs  jwt_auth.rs  mod.rs
affinidi-messaging-mediator/src/database/: accounts.rs  acls.rs  admin_accounts.rs  atm-functions.lua  delete.rs  fetch.rs  get.rs  handlers.rs  initialization.rs  list.rs  messages.rs  mod.rs  oob_discovery.rs  session.rs  stats.rs  store.rs  streaming.rs
affinidi-messaging-mediator/src/handlers/: authenticate.rs  inbox_fetch.rs  message_delete.rs  message_inbound.rs  message_list.rs  message_outbound.rs  mod.rs  oob_discovery.rs  websocket.rs  well_known_did_fetch.rs
affinidi-messaging-mediator/src/messages/: error_response.rs  inbound.rs  mod.rs  store.rs
affinidi-messaging-mediator/src/resolvers/: affinidi_secrets.rs  mod.rs
affinidi-messaging-mediator/src/tasks/: statistics.rs  websocket_streaming.rs
affinidi-messaging-mediator/tests/: common.rs  integration_test.rs  message_builders.rs  response_validations.rs
affinidi-messaging-mediator/tests/keys/: client.chain
affinidi-messaging-processor/: CHANGELOG.md  Cargo.toml  README.md
affinidi-messaging-processor/redis-functions/: atm-functions.lua
affinidi-messaging-processors/: Cargo.toml
affinidi-messaging-processors/tests/: dummy_test.rs
affinidi-messaging-sdk/: CHANGELOG.md  Cargo.toml  README.md
affinidi-messaging-sdk/examples/: common.rs  fetch_message_as_bob.rs  forwarding.rs  message_pickup.rs  ping.rs  send_message.rs  send_message_to_bob.rs  send_message_to_me.rs  test_acls.rs
affinidi-messaging-sdk/examples/setup_environment/: demo.tape  main.rs  mediator.rs
affinidi-messaging-sdk/src/: config.rs  errors.rs  lib.rs  profiles.rs  secrets.rs
affinidi-messaging-sdk/src/authentication/: mod.rs
affinidi-messaging-sdk/src/conversions/: mod.rs
affinidi-messaging-sdk/src/delete_handler/: mod.rs
affinidi-messaging-sdk/src/messages/: delete.rs  fetch.rs  get.rs  known.rs  list.rs  mod.rs  pack.rs  problem_report.rs  sending.rs  unpack.rs  well_known_did.rs
affinidi-messaging-sdk/src/protocols/: mediator.rs  message_pickup.rs  mod.rs  oob_discovery.rs  routing.rs  trust_ping.rs
affinidi-messaging-sdk/src/public/: mod.rs  well_known_did.rs
affinidi-messaging-sdk/src/resolvers/: mod.rs  secrets_resolver.rs
affinidi-messaging-sdk/src/transports/: mod.rs
affinidi-messaging-text-client/: .gitignore  Cargo.toml  README.md  config.json
affinidi-messaging-text-client/src/: config.rs  contact.rs  main.rs  messages.rs  termination.rs
affinidi-messaging-text-client/src/state_store/: chat_message.rs  inbound_messages.rs  mod.rs  outbound_messages.rs  state.rs  state_store.rs
affinidi-messaging-text-client/src/ui/: channels.rs  chat.rs  invite.rs  main_window.rs  mod.rs  settings.rs
affinidi-messaging-text-client/src/ui_management/: mod.rs  ui_manager.rs
atm-sdk/: Cargo.toml  README.md
atm-sdk/examples/: ping.rs
atm-sdk/src/: config.rs  errors.rs  lib.rs
atm-sdk/src/authentication/: mod.rs
atm-sdk/src/conversions/: mod.rs
atn-atm-mediator/: CHANGELOG.md  Cargo.toml  README.md  log
atn-atm-mediator/conf/: mediator.toml
atn-atm-mediator/examples/: create_local_certs.rs  generate_secrets.rs  send_message.rs
atn-atm-mediator/local-development/: docker-compose.yaml
atn-atm-mediator/src/: lib.rs  main.rs
atn-atm-processor/: CHANGELOG.md  Cargo.toml  README.md
atn-atm-processor/redis-functions/: atm-functions.lua
atn-atm-sdk/: CHANGELOG.md  Cargo.toml  README.md
atn-atm-sdk/examples/: demo.rs  message_pickup.rs  ping.rs  send_message.rs  send_message_to_me.rs
atn-atm-sdk/src/: config.rs  errors.rs  lib.rs  websockets.rs
conf/: mediator.toml  (+4 more)
(+281 files in other folders)
