[workspace]
members = [
    "affinidi-messaging-didcomm",
    "affinidi-messaging-sdk",
    "affinidi-messaging-mediator",
    "affinidi-messaging-processor",
]
resolver = "2"

[workspace.package]
version = '0.8.0'
edition = "2021"
authors = ["Glenn Gore <glenn@affinidi.com>"]
description = "Affinidi Messaging"
readme = "README.md"
homepage = "https://affinidi.com/"
keywords = ["did", "ssi", "ATM", "affinidi"]
publish = true
license = "Apache-2.0"
repository = "https://github.com/affinidi/affinidi-messaging"

[workspace.dependencies]
affinidi-messaging-sdk = { version = "0.8", path = "./affinidi-messaging-sdk" }
affinidi-messaging-didcomm = { version = "0.8", path = "./affinidi-messaging-didcomm" }
affinidi-did-resolver-cache-sdk = { version = "0.1.13" }
anyhow = '1.0'
askar-crypto = "0.3.1"
async-convert = "1"
async-trait = "0.1"
aws-config = "1.5"
aws-sdk-dynamodb = "1.48"
aws-sdk-memorydb = "1.44"
aws-sdk-secretsmanager = "1.48"
aws-sdk-ssm = "1.49"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
bs58 = "0.5"
chrono = "0.4"
criterion = "0.5"
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }
dialoguer = "0.11"
did-peer = { version = "0.1.13" }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
futures-util = "0.3"
getrandom = "0.2"
hostname = "0.4"
http = "1"
itertools = "0.13"
jsonwebtoken = "9.3"
lazy_static = "1.5"
rand = "0.8"
rcgen = { version = "0.13", default-features = false, features = [
    "aws_lc_rs",
    "pem",
] }
redis = { version = "0.27", features = [
    "tokio-rustls-comp",
    "tls-rustls-insecure",
] }
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
ring = { version = "0.17", features = ["std"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
    "tls12",
] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-enum-str = '0.4'
serde_json = "1.0"
sha2 = "0.10"
sha256 = "1.5"
ssi = "0.9"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
url = "2.5"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
varint = "0.9"
