[[bench]]
name = 'pack_signed'
harness = false

[[bench]]
name = 'pack_encrypted'
harness = false

[package]
name = 'affinidi-messaging-didcomm'
version.workspace = true
authors = [
    'Vyacheslav Gudkov <vyacheslav.gudkov@dsr-corporation.com>',
    'Glenn Gore <glenn@affinidi.com>',
]
edition = '2018'
description = 'DIDComm for Rust'
license = 'Apache-2.0'
repository = 'https://github.com/sicpa-dlab/didcomm-rust'
readme = 'README.md'
publish = true

[dependencies]
affinidi-did-resolver-cache-sdk.workspace = true
ssi.workspace = true
tracing.workspace = true
anyhow = '1.0'
base64 = '0.22'
async-trait = '0.1'
thiserror = '1.0'
serde_json = '1.0'
serde-enum-str = '0.4'
sha2 = '0.10'
bs58 = "0.5"
varint = "0.9.0"
lazy_static = { version = "1.4.0", optional = true }
askar-crypto = "0.3.1"

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.uuid]
version = "1.8"
features = ["v4"]

[dev-dependencies]
lazy_static = '1.4.0'
tracing-test = "0.2"

[dev-dependencies.tokio]
version = '1.9'
features = ['rt', 'macros']

[dev-dependencies.getrandom]
version = '0.2'
features = ['js']

[dev-dependencies.criterion]
version = '0.5'
features = ['async_futures']

[features]
uniffi = []
testvectors = ["lazy_static"]
