[[bench]]
name = 'pack_signed'
harness = false

[[bench]]
name = 'pack_encrypted'
harness = false

[package]
name = 'affinidi-messaging-didcomm'
version.workspace = true
authors = [
    'Vyacheslav Gudkov <vyacheslav.gudkov@dsr-corporation.com>',
    'Glenn Gore <glenn@affinidi.com>',
]
edition = '2018'
description = 'DIDComm for Rust'
license = 'Apache-2.0'
repository = 'https://github.com/sicpa-dlab/didcomm-rust'
readme = 'README.md'
publish = true

[dependencies]
affinidi-did-resolver-cache-sdk.workspace = true
ssi.workspace = true
tracing.workspace = true
anyhow.workspace = true
base64.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde-enum-str.workspace = true
sha2.workspace = true
bs58.workspace = true
varint.workspace = true
askar-crypto.workspace = true
serde.workspace = true
uuid.workspace = true
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
tracing-test = "0.2"
tokio = { version = '1.9', features = ['rt', 'macros'] }
getrandom = { version = '0.2', features = ['js'] }
criterion = { version = '0.5', features = ['async_futures'] }

[features]
uniffi = []
testvectors = ["lazy_static"]
