[package]
name = 'affinidi-messaging-didcomm'
version.workspace = true
authors = [
    'Vyacheslav Gudkov <vyacheslav.gudkov@dsr-corporation.com>',
    'Glenn Gore <glenn@affinidi.com>',
]
edition.workspace = true
description = 'DIDComm for Rust, integrates into Affinidi Messaging. See Affinidi Messaging for a complete communications solution.'
license = 'Apache-2.0'
repository.workspace = true
readme = 'README.md'
publish = true
rust-version.workspace = true

[dependencies]
affinidi-secrets-resolver.workspace = true
affinidi-did-resolver-cache-sdk.workspace = true
ahash.workspace = true
anyhow.workspace = true
base64.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-enum-str.workspace = true
sha2.workspace = true
sha256.workspace = true
bs58.workspace = true
varint.workspace = true
lazy_static = { workspace = true, optional = true }
askar-crypto.workspace = true
ssi.workspace = true
tokio = { workspace = true, features = ['rt', 'macros'] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
criterion = { workspace = true, features = ['async_futures'] }
lazy_static.workspace = true
tracing-test.workspace = true

[features]
uniffi = []
testvectors = ["lazy_static"]
