[package]
name = "affinidi-messaging-mediator"
version.workspace = true
description = "DIDComm Mediator service for Affinidi Messaging"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
affinidi-messaging-sdk.workspace = true
affinidi-messaging-didcomm.workspace = true
affinidi-did-resolver-cache-sdk.workspace = true
async-convert = "1"
async-trait = "0.1"
aws-config = "1.5"
aws-sdk-dynamodb = "1.29"
aws-sdk-memorydb = "1.26.0"
aws-sdk-secretsmanager = "1.26.0"
aws-sdk-ssm = "1.26.0"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
chrono = "0.4"
deadpool-redis = { version = "0.17", features = ["rt_tokio_1"] }
hostname = "0.4"
http = "1"
jsonwebtoken = "9.3"
itertools = "0.13"
rand = "0.8"
redis = { version = "0.26", features = [
    "tokio-rustls-comp",
    "tls-rustls-insecure",
] }
regex = "1"
ring = { version = "0.17", features = ["std"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
    "tls12",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha256 = "1.5"
ssi = "0.8"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tracing = { version = "0.1", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
did-peer.workspace = true
rcgen = { version = "0.13", default-features = false, features = [
    "aws_lc_rs",
    "pem",
] }
reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
time = "0.3"
