[package]
name = "affinidi-messaging-mediator"
version.workspace = true
description = "DIDComm Mediator service for Affinidi Messaging"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[[bin]]
name = "mediator"
path = "src/main.rs"

[dependencies]
affinidi-messaging-sdk.workspace = true
affinidi-messaging-didcomm.workspace = true
affinidi-messaging-mediator-processors.workspace = true
affinidi-messaging-mediator-common.workspace = true
affinidi-did-resolver-cache-sdk.workspace = true
affinidi-secrets-resolver.workspace = true
async-convert.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-memorydb.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-ssm.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
base64.workspace = true
chrono.workspace = true
deadpool-redis.workspace = true
hostname.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
itertools.workspace = true
num-format.workspace = true
rand.workspace = true
redis.workspace = true
regex.workspace = true
ring.workspace = true
rustls.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha256.workspace = true
ssi.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
console.workspace = true
dialoguer.workspace = true
lazy_static.workspace = true
reqwest.workspace = true
