[package]
name = "affinidi-messaging-processing"
version.workspace = true
description = "Affinidi Messaging Processor"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
