[package]
name = "affinidi-messaging-processors"
version.workspace = true
description = "Affinidi Messaging Processors"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[[bin]]
name = "message_expiry_cleanup"
path = "src/setup_environment/main.rs"

[dev-dependencies]
tokio.workspace = true
