[package]
name = "affinidi-messaging-sdk"
version.workspace = true
description = "Affinidi Messaging SDK"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
affinidi-messaging-didcomm.workspace = true
affinidi-did-resolver-cache-sdk.workspace = true
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
http = "1"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
    "tls12",
] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha256 = "1.5"
ssi = "0.8"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.23.0", features = [
    "rustls-tls-native-roots",
] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
clap.workspace = true
