[package]
name = "affinidi-messaging-sdk"
version.workspace = true
description = "Affinidi Messaging SDK"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
affinidi-messaging-didcomm.workspace = true
affinidi-did-resolver-cache-sdk.workspace = true
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha256.workspace = true
ssi.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
clap.workspace = true
did-peer.workspace = true
