[package]
name = "affinidi-messaging-text-client"
version.workspace = true
description = "Affinidi Messaging SDK"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
affinidi-messaging-sdk.workspace = true
affinidi-did-resolver-cache-sdk.workspace = true
chrono.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
image.workspace = true
ratatui.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

tui-logger = { version = "0.13.3", path = "./tui-logger", features = [
    "tracing-support",
] }
ratatui-image = { version = "2.0.1", path = "./ratatui-image", features = [
    "crossterm",
    "image-defaults",
] }
tui-input = "0.11.0"
log = "0.4.22"
