[package]
name = "affinidi-messaging-text-client"
version.workspace = true
description = "Affinidi Messaging SDK"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
affinidi-messaging-sdk.workspace = true
affinidi-messaging-didcomm.workspace = true
affinidi-did-resolver-cache-sdk.workspace = true
anyhow.workspace = true
chrono.workspace = true
circular-queue.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
image.workspace = true
qrcode.workspace = true
rand.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
ssi.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui-image.workspace = true
tui-logger.workspace = true
tui-input.workspace = true
log.workspace = true
