[package]
name = "atm-sdk"
version = "0.1.1"
edition = "2021"
authors = ["Glenn Gore <glenn@affinidi.com>"]
description = "Affinidi Trusted Messaging SDK"
readme = "README.md"
homepage = "https://affinidi.com/"
keywords = ["did", "ssi", "ATM"]
publish = false
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
did-peer = { version = "0.3", path = "../../did-peer" }
didcomm = { version = "0.4.1", path = "../didcomm-rust" }
http = "1"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
ssi = "0.7"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
    "tls12",
] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
