[package]
name = "atn-atm-mediator"
version = "0.2.0"
description = "DIDComm Mediator service for Affinidi Secure Messaging"
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
async-convert = "1"
async-trait = "0.1"
atn-atm-sdk = { version = "0.1", path = "../atn-atm-sdk" }
aws-config = "1.5"
aws-sdk-dynamodb = "1.29"
aws-sdk-memorydb = "1.26.0"
aws-sdk-secretsmanager = "1.26.0"
aws-sdk-ssm = "1.26.0"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22"
chrono = "0.4"
deadpool-redis = { version = "0.15", features = ["rt_tokio_1"] }
did-method-key = "0.2"
did-peer = { version = "0.3", path = "../../did-peer" }
atn-atm-didcomm = { version = "0.5", path = "../atn-atm-didcomm" }
# didcomm-affinidi = { version = "0.1", path = "../didcomm-affinidi" }
http = "1"
jsonwebtoken = "9.3"
itertools = "0.13"
rand = "0.8"
redis = { version = "0.25.3", features = [
    "tokio-rustls-comp",
    "tls-rustls-insecure",
] }
regex = "1"
ring = { version = "0.17", features = ["std"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha256 = "1.5"
ssi = "0.7"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
rcgen = { version = "0.13", default-features = false, features = [
    "aws_lc_rs",
    "pem",
] }
reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
    "tls12",
] }
time = "0.3"
