[package]
name = "affinidi-messaging-mediator-common"
version.workspace = true
description = "Affinidi Messaging Mediator Common Library"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
affinidi-messaging-sdk.workspace = true
axum.workspace = true
rand.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
rustls.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
